--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="content">
-    <label for="thefile" class="file"> Elije el audio
+    <label for="thefile" class="file"> Elije el Audio
       <input type="file" id="thefile" accept="audio/*" />
     </label>
 
@@ -18,7 +18,6 @@
   </div>
   
   <div id="out"></div>
-
 
   <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js'></script>
