add voice recognition

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
       <input type="file" id="thefile" accept="audio/*" />
     </label>
 
-    <audio id="audio" controls></audio>
+    <div class="button-container">
+      <audio id="audio" controls></audio>
+      <button id="start-btn">Iniciar Reconocimiento</button>
+      <p id="status"></p>
+    </div>
   </div>
   
   <div id="out"></div>
