corrected rec micro function

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <div class="card">
       <audio id="audio"></audio>
-      <!-- <div class="title-container">
-        <p class="title-1">Reproductor</p>
-      </div> -->
+      <div class="title-container">
+        <p id="status"></p>
+      </div>
       <div class="controls">
         <div class="volume-container">
           <svg class="volume-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" height="50" width="50">
@@ -49,7 +49,7 @@
         <p class="timetext time_now" id="currentTime">0:00</p>
         <p class="timetext time_full" id="totalTime">0:00</p>
       </div>
-    </div>
+    </div>      
   </div>
 
   <div id="out"></div>
